--- a/JS_Patterns/jsTest.html
+++ b/JS_Patterns/jsTest.html
@@ -1,9 +1,10 @@
 <script>
 function Universe(){
-	if( typeof Universe.instance === "object" )
-		return Universe.instance;
+	var instance = this;
 	this.name = "name";
-	Universe.instance = this;
+	Universe = function(){
+		return instance;
+	};
 }
 
 var uni = new Universe();
