생성자 함수 3

--- a/JS_Patterns/jsTest.html
+++ b/JS_Patterns/jsTest.html
@@ -17,6 +17,8 @@ console.log( obj4.str );  //functions b
 
 console.log( obj3 == obj4);//true
 console.log( window == window.obj3);//true
+console.log( window == this );//true
+console.log( window == obj3 );//true
 
 
 </script>
