--- a/JS_Patterns/jsTest.html
+++ b/JS_Patterns/jsTest.html
@@ -1,24 +1,18 @@
 <script>
-var Gadget = function(str ){
-	this.str = str;
-	return this;
+var Square = function( length ){
+	this.length = length;
+	this.getArea = function(){
+		return length*length;
+	}
 };
+var sqr1 = new Square(10);
+var sqr2 = new Square(5);
+console.log( sqr1.getArea());//100
+console.log( sqr2.getArea());//25
 
-var obj =   new Gadget("construct a");
-var obj2 = new Gadget("construct b");
-var obj3 = Gadget("functions a");
-var obj4 = Gadget("functions b");
-
-console.log( obj.str );    //construct a
-console.log( obj2.str );  //construct b
-
-console.log( obj3.str );  //functions a ->this는 window 객체를 나타낸다
-console.log( obj4.str );  //functions b
-
-console.log( obj3 == obj4);//true
-console.log( window == window.obj3);//true
-console.log( window == this );//true
-console.log( window == obj3 );//true
-
+sqr1.getArea.temp = 1;
+sqr2.getArea.temp = 2;
+console.log( sqr1.getArea.temp);//1
+console.log( sqr2.getArea.temp);//2
 
 </script>
