--- a/JS_Patterns/jsTest.html
+++ b/JS_Patterns/jsTest.html
@@ -1,18 +1,26 @@
 <script>
-var Square = function( length ){
-	this.length = length;
-	this.getArea = function(){
-		return length*length;
-	}
+
+function Rectangle( width,height ){
+	this.width = width;
+	this.height = height;
 };
-var sqr1 = new Square(10);
-var sqr2 = new Square(5);
-console.log( sqr1.getArea());//100
-console.log( sqr2.getArea());//25
 
-sqr1.getArea.temp = 1;
-sqr2.getArea.temp = 2;
-console.log( sqr1.getArea.temp);//1
-console.log( sqr2.getArea.temp);//2
+Rectangle.prototype.getArea = function(){
+		return this.width*this.height;
+	};
 
+var rect = new Rectangle( 5,10 );
+console.log( rect.getArea());//50
+
+
+function Square( length ){
+	this.base = Rectangle;
+	this.base(length,length);
+}
+Square.prototype = Rectangle.prototype;
+
+var sqr = new Square( 10 );
+console.log( sqr.getArea());//100
+
+console.log( sqr instanceof Rectangle );//true
 </script>
