--- a/AndroidWebApp/index.html
+++ b/AndroidWebApp/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="android.css"/>	
         <!--link rel="stylesheet" type="text/css" href="android.css" media="only screen and (max-width: 480px)" />
         <link rel="stylesheet" type="text/css" href="desktop.css" media="screen and (min-width: 481px)" /-->
+        <script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="android.js"></script>
     </head>
     <body>
         <div id="container">
