--- a/JQTouch/index.html
+++ b/JQTouch/index.html
@@ -2,14 +2,21 @@
 <html>
     <head>
         <title>Kilo</title>
+        <link type="text/css" rel="stylesheet" media="screen" href="jqtouch/jqtouch.css" />
+        <link type="text/css" rel="stylesheet" media="screen" href="themes/jqt/theme.css" />
+        <script type="text/javascript" src="jqtouch/jquery.js"></script>
+        <script type="text/javascript" src="jqtouch/jqtouch.js"></script>
+        <script type="text/javascript">
+            $.jQTouch({}); 
+        </script>
     </head>
     <body>
-        <div id="home">
-            <div>
+         <div id="home">
+            <div >
                 <h1>Kilo</h1>
                 Settings
             </div>
-            <ul>
+            <ul >
                 <li >Dates</li>
                 <li >About</li>
             </ul>
