화면 이동 추가 toolbar 및 arrow 속성 추가 back 버튼 구현

--- a/JQTouch/index.html
+++ b/JQTouch/index.html
@@ -11,15 +11,26 @@
         </script>
     </head>
     <body>
-         <div id="home">
-            <div >
+        <div id="home">
+            <div class="toolbar">
                 <h1>Kilo</h1>
                 Settings
             </div>
-            <ul >
-                <li >Dates</li>
-                <li >About</li>
+            <ul class="edgetoedge">
+                <li class="arrow">Dates</li>
+                <li class="arrow"><a href="#about">About</a></li>
             </ul>
         </div>
+
+        <div id="about">
+            <div class="toolbar">
+                <h1>About</h1>
+                <a class="button back" href="#">Back</a>
+            </div>
+            <div>
+                <p>Kilo gives you easy access to your food diary.</p>
+            </div>
+        </div>
+
     </body>
 </html>
