--- a/AndroidWebApp/index.html
+++ b/AndroidWebApp/index.html
@@ -1,12 +1,17 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Jonathan Stark</title>
 	<meta name="viewport" content="user-scalable=no, width=device-width" />
-	<link rel="stylesheet" type="text/css" href="android.css"/>	
-        <!--link rel="stylesheet" type="text/css" href="android.css" media="only screen and (max-width: 480px)" />
-        <link rel="stylesheet" type="text/css" href="desktop.css" media="screen and (min-width: 481px)" /-->
-        <script type="text/javascript" src="jquery.js"></script>
+        <link type="text/css" rel="stylesheet" media="screen" href="jqtouch/jqtouch.css" />
+        <link type="text/css" rel="stylesheet" media="screen" href="themes/jqt/theme.css" />
+        <script type="text/javascript" src="jqtouch/jquery.js"></script>
+        <script type="text/javascript" src="jqtouch/jqtouch.js"></script>
         <script type="text/javascript" src="android.js"></script>
+        <script type="text/javascript">
+            $.jQTouch({ 
+            }); 
+        </script>
     </head>
     <body>
         <div id="container">
