--- a/AndroidWebApp/index.html
+++ b/AndroidWebApp/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="user-scalable=no, width=device-width" />
         <link type="text/css" rel="stylesheet" media="screen" href="jqtouch/jqtouch.css" />
         <link type="text/css" rel="stylesheet" media="screen" href="themes/jqt/theme.css" />
+	<link rel="stylesheet" type="text/css" href="android.css"/>	
         <script type="text/javascript" src="jqtouch/jquery.js"></script>
         <script type="text/javascript" src="jqtouch/jqtouch.js"></script>
         <script type="text/javascript" src="android.js"></script>
@@ -15,17 +16,17 @@
     </head>
     <body>
         <div id="container">
-            <div id="header">
-                <h1><a href="./">Jonathan Stark</a></h1>
+            <div id="header" >
+                <h1 class="toolbar"><a href="./" >Jonathan Stark</a></h1>
                 <div id="utility">
-                    <ul>
+                    <ul class="rounded">
                         <li><a href="about.html">About</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div id="nav">
-                    <ul>
+                    <ul class="rounded" >
                         <li><a href="consulting-clinic.html">Consulting Clinic</a></li>
                         <li><a href="on-call.html">On Call</a></li>
                         <li><a href="development.html">Development</a></li>
@@ -37,12 +38,12 @@
                 <h2>About</h2>
                 <p>Jonathan Stark is a web developer, speaker, and author. His consulting firm, Jonathan Stark Consulting, Inc., has attracted clients such as Staples, Turner Broadcasting, and the PGA Tour. ...</p>
             </div>
-            <div id="sidebar">
-                <img alt="Manga Portrait of Jonathan Stark" src="jonathanstark-manga-small.png">
-                <p>Jonathan Stark is a mobile and web application developer who the Wall Street Journal has called an expert on publishing desktop data to the web.</p>
+            <div id="sidebar" >
+                <img alt="Manga Portrait of Jonathan Stark" src="jonathanstark-manga-small.png " >
+                <p class="toolbar">Jonathan Stark is a mobile and web application developer who the Wall Street Journal has called an expert on publishing desktop data to the web.</p>
             </div>
-            <div id="footer">
-                <ul>
+            <div id="footer" >
+                <ul class="rounded">
                     <li><a href="services.html">Services</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
