--- a/JQTouch/index.html
+++ b/JQTouch/index.html
@@ -6,11 +6,7 @@
         <link type="text/css" rel="stylesheet" media="screen" href="themes/jqt/theme.css" />
         <script type="text/javascript" src="jqtouch/jquery.js"></script>
         <script type="text/javascript" src="jqtouch/jqtouch.js"></script>
-        <script type="text/javascript">
-            var jQT = $.jQTouch({ 
-                icon: 'kilo.png'
-            }); 
-        </script>
+        <script type="text/javascript" src="kilo.js"></script>
     </head>
     <body>
         <div id="home">
