--- a/JQTouch/index.html
+++ b/JQTouch/index.html
@@ -4,6 +4,7 @@
         <title>Kilo</title>
         <link type="text/css" rel="stylesheet" media="screen" href="jqtouch/jqtouch.css" />
         <link type="text/css" rel="stylesheet" media="screen" href="themes/jqt/theme.css" />
+        <link type="text/css" rel="stylesheet" media="screen" href="kilo.css" />
         <script type="text/javascript" src="jqtouch/jquery.js"></script>
         <script type="text/javascript" src="jqtouch/jqtouch.js"></script>
         <script type="text/javascript" src="kilo.js"></script>
