--- a/HTML5/clock.html
+++ b/HTML5/clock.html
@@ -7,7 +7,7 @@
     var centerX = centerY = 150;
 
     setInterval(function(){
-        canvas.width = canvas.width;
+        canvas = canvas;
         cx.beginPath();
         cx.arc( centerX, centerY , 100, 0, 2 * Math.PI, true );
         cx.translate( centerX, centerY );
