--- a/JS_Patterns/jsTest.html
+++ b/JS_Patterns/jsTest.html
@@ -1,22 +1,12 @@
 <script>
+temp = 1;
+var temp = 0;
+console.log( window.temp ); //1
+console.log( temp ); //0
 
-var s1 = "hello";
-var s2 = "hello";
-console.log( s1 == s2 ); //true
-console.log( s1 === s2 ); //true
+function f() { console.log("function 0");};
+var f = function(){ console.log("function 1");};
 
-var s3 = new String( "hello" );
-var s4 = new String( "hello" );
-console.log( s3 == s4 ); //false
-console.log( s3 === s4 ); //false
-console.log( s3.toString() === s4.toString() ); //true
-
-var a1 = 0;
-var a2 = "0";
-var a3 = false;
-console.log( a1 == a2 ); //true
-console.log( a1 == a3 ); //true
-console.log( a1 === a2 ); //false
-console.log( a1 === a3 ); //false
+console.log( window.f ); //1
 
 </script>
