offLine 가능하도록 함

--- a/OffLine/index.html
+++ b/OffLine/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="demo.manifest">
     <head>
         <title>Offline App Cache Demo</title>
         <link rel="stylesheet" href="styles/screen.css" type="text/css" media="screen" title="no title" charset="utf-8">
