--- a/JS_Patterns/jsTest.html
+++ b/JS_Patterns/jsTest.html
@@ -1,10 +1,71 @@
-<tr>
-    <td>1</td>
-    <td>2</td>
-    <td>3</td>
-    <td>4</td>
-</tr>
 <script>
+function checkEmailPattern(input){
+    var isValidChar = function (ch ){
+        if( ( ch >= '0' && ch <='9' ) 
+            || ( ch >= 'a' && ch <='z' ) 
+            || ( ch >= 'A' && ch <='Z' ) 
+            || ch == '_' || ch == '-' ){
+                return true;
+            }
 
+        return false;
+    }
+    var result = false;
+    var state = 0;
+    var count = 0;
+    var dot_count = 0;
+    for( i = 0 ; i < input.length ; i++ ){
+        var ch = input[i];
+        count++;
+        if( state == 0 ){// id check            
+            if( isValidChar(ch) == false && ch != '.' ){
+                if( ch == '@' && count > 1 ) {
+                    state = 1, count = 0;                   
+                }else{
+                    result = false;
+                    break;
+                }
+            }
+       }else if( state == 1 ){//domain check
+            if( isValidChar(ch) == false ){
+                if( ch == '.' && count > 1 ) {
+                    state = 2 , count = 0 ,dot_count++;                  
+                }else{
+                    result = false;
+                    break;
+                }
+            }
+       }else if( state == 2 ){//.co.kr/.com check
+            if(  isValidChar(ch) || ch == '.'  ){
+                if( ch == '.'){
+                    dot_count++
+                }
+                if( count > 0 && ( dot_count == 1 || dot_count == 2 ) ){
+                    result = true;
+                }else {
+                    result = false;
+                    //no break;
+                }
+            }
+            else{
+                result = false;
+                break;
+            }
+       }
+     
+    }//for
+
+    return result;
+}
+
+var input = prompt("input email");
+//var emailPattern = /([0-9a-zA-Z_-.]+)@([0-9a-zA-Z_-]+)(\.[0-9a-zA-Z_-]+){1,2}/;
+//if( emailPattern.test( input) )
+if( checkEmailPattern(input) )
+    alert("input completed");
+else
+    alert("<ERROR>\nwrong email format!!!");
 
 </script>
+
+
